[package]
name = "ghclone"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/PhilboBaggins/ghclone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
serde = { version = "1.0.163", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
